K8S/mysql-platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - mountPath: /var/opt/mysql/data
            name: mysqldb
      volumes:
        - name: mysqldb
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusetrip-service
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: myslq
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
