K8S/platforms-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnodeportservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
