K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serivce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: /api/platforms
        backend:
          service:
            name: platforms-clusetrip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /api/c/platforms
        backend:
          service:
            name: commands-clusetrip-service
            port: 
              number: 80
